Add scaffolding for adding react components
- add react library to chrome extension indices
- rename app to background to match chrome naming scheme
- fix typo in readme file
- add note about using editor with TypeScript

--- a/src/html/chrome/dev/index.html
+++ b/src/html/chrome/dev/index.html
@@ -5,8 +5,8 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="react.production.js"></script>
-    <script src="react-dom.production.js"></script>
+    <script src="react.development.js"></script>
+    <script src="react-dom.development.js"></script>
     <script src="index_bundle.js"></script>
   </body>
 </html>
