Add rule for building sass files
- add cssremedy to set modern properties as default css
- add initial css for editor
- update index files to include css file

--- a/src/html/chrome/index.html
+++ b/src/html/chrome/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Draft - Note Taking</title>
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <div id="root"></div>
