--- a/src/html/chrome/dev/index.html
+++ b/src/html/chrome/dev/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="main-dev.css">
   </head>
   <body>
-    <div id="root"></div>
+    <div id="main"></div>
     <script src="react.development.js"></script>
     <script src="react-dom.development.js"></script>
     <script src="index_bundle.js"></script>
